# android-ndk-sample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/madbrains/ndksample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/main/: Main.cpp  Main.h
app/src/main/java/ru/madbrains/ndksample/: App.kt  Commit.kt  JSampleJniCalls.java  MainActivity.kt  Repository.kt  SampleJniCalls.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/ru/madbrains/ndksample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
samplendklibrary/: build.gradle
samplendklibrary/src/androidTest/java/ru/madbrains/samplendklibrary/: ExampleInstrumentedTest.java
samplendklibrary/src/main/: AndroidManifest.xml
samplendklibrary/src/main/cpp/: CMakeLists.txt  Sample.h
samplendklibrary/src/main/res/values/: strings.xml
samplendklibrary/src/test/java/ru/madbrains/samplendklibrary/: ExampleUnitTest.java
